stagging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: todoapp
    namespace: stagging
    labels:
      app: todoapp
spec:
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
        - name: todoapp
          image: harjay88/fronttodoapp
          resources:
            requests:
              cpu: "50m"
              memory: "50M"
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: todoapi
    namespace: stagging
    labels:
      app: todoapi
spec:
  selector:
    matchLabels:
      app: todoapi
  template:
    metadata:
      labels:
        app: todoapi
    spec:
      containers:
        - name: todoapi
          image: harjay88/backendtodoapptest
          resources:
            requests:
              cpu: "50m"
              memory: "50M"
