stagging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-service
  namespace: stagging
spec:
  selector:
    app: todoapp ##To-Frontend
  type: ClusterIP
  ports:
    - port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: todoapi-service
  namespace: stagging
spec:
  selector:
    app: todoapi
  type: ClusterIP
  ports:
    - port: 4000
